--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = lua54/jni/lua54
 	url = https://github.com/lua/lua.git
 	branch = v5.4
+[submodule "pluto/jni/pluto"]
+	path = pluto/jni/pluto
+	url = https://github.com/PlutoLang/Pluto.git
