fix: pluto actually compiles

--- a/pluto/build.gradle
+++ b/pluto/build.gradle
@@ -198,17 +198,17 @@ jnigen {
     })
 
     add(Windows, x32, x86, {
-        it.libraries += "-lbcrypt -lws2_32 -liphlpapi"
+        it.libraries += "-lbcrypt -lws2_32 -liphlpapi -ldnsapi"
 
         linkerConfig(it, Platform.Win32)
     })
     add(Windows, x64, x86, {
-        it.libraries += "-lbcrypt -lws2_32 -liphlpapi"
+        it.libraries += "-lbcrypt -lws2_32 -liphlpapi -ldnsapi"
 
         linkerConfig(it, Platform.Win64)
     })
     add(Windows, x64, ARM) {
-        it.libraries += "-lbcrypt -lws2_32 -liphlpapi"
+        it.libraries += "-lbcrypt -lws2_32 -liphlpapi -ldnsapi"
 
         linkerConfig(it, Platform.WinAArch64)
     }
